[gd_scene load_steps=14 format=3 uid="uid://bxk6rthiojiro"]

[ext_resource type="Script" path="res://Units/melee_units/melee_unit.gd" id="1_alxd2"]
[ext_resource type="Texture2D" uid="uid://ch2v2c6l7ume" path="res://Units/unit_body.png" id="2_yfki6"]
[ext_resource type="Texture2D" uid="uid://betvqvc8rlol0" path="res://Units/unit_head.png" id="3_0wuui"]
[ext_resource type="Texture2D" uid="uid://c0wa3bgm4kk1s" path="res://Units/melee_units/melee_weapons/melee_weapon_1.png" id="4_l3y1u"]
[ext_resource type="PackedScene" uid="uid://b66twah3ba66x" path="res://Units/Usables/health_bar.tscn" id="5_385mx"]
[ext_resource type="PackedScene" uid="uid://chuhcfppmw1dd" path="res://Units/Usables/other_animation.tscn" id="6_goa5j"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_jvusy"]
friction = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ddju7"]
radius = 31.0

[sub_resource type="CircleShape2D" id="CircleShape2D_2vdy1"]
radius = 56.0089

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ld4wg"]
radius = 109.0
height = 568.0

[sub_resource type="Animation" id="Animation_t5bss"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Side/Hand:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-8, 8)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Side/Hand:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_kucyg"]
resource_name = "punch"
length = 0.9
step = 0.05
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5, 0.9),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"deal_damage"
}, {
"args": [],
"method": &"wait_time"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Side/Hand:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4, 0.5, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-8, 8), Vector2(-8, 8), Vector2(8, -7), Vector2(35, 8), Vector2(-8, 8)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Side/Hand:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 0.9),
"transitions": PackedFloat32Array(2.07053, 1, 1, 1),
"update": 0,
"values": [0.0, -0.349066, 2.26893, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7yia0"]
_data = {
"RESET": SubResource("Animation_t5bss"),
"punch": SubResource("Animation_kucyg")
}

[node name="MeleUnitRigid" type="RigidBody2D"]
z_index = 3
mass = 60.0
physics_material_override = SubResource("PhysicsMaterial_jvusy")
gravity_scale = 0.0
lock_rotation = true
script = ExtResource("1_alxd2")

[node name="Side" type="Sprite2D" parent="."]

[node name="Body" type="Sprite2D" parent="Side"]
position = Vector2(0, 19)
scale = Vector2(0.8, 0.8)
texture = ExtResource("2_yfki6")

[node name="Head" type="Sprite2D" parent="Side"]
position = Vector2(0, -30)
scale = Vector2(0.8, 0.8)
texture = ExtResource("3_0wuui")

[node name="Hand" type="Sprite2D" parent="Side"]
position = Vector2(-8, 8)
scale = Vector2(0.8, 0.8)
texture = ExtResource("4_l3y1u")

[node name="UnitSpace" type="CollisionShape2D" parent="."]
position = Vector2(0, 24)
rotation = 1.5708
shape = SubResource("CircleShape2D_ddju7")

[node name="HitBox" type="Area2D" parent="."]
collision_mask = 3
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("CircleShape2D_2vdy1")
debug_color = Color(0.909804, 0.266667, 0.356863, 0.219608)
metadata/_edit_lock_ = true

[node name="SearchBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="SearchBox"]
shape = SubResource("CapsuleShape2D_ld4wg")
debug_color = Color(0, 0.647059, 0.247059, 0.188235)
metadata/_edit_lock_ = true

[node name="Fight" type="Timer" parent="."]
one_shot = true

[node name="HealthBar" parent="." instance=ExtResource("5_385mx")]
offset_left = -27.0
offset_top = -72.0
offset_right = 81.0
offset_bottom = -42.0

[node name="HandAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7yia0")
}

[node name="OtherAnimation" parent="." instance=ExtResource("6_goa5j")]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="area_exited" from="HitBox" to="." method="_on_hit_box_area_exited"]
[connection signal="area_entered" from="SearchBox" to="." method="_on_search_box_area_entered"]
[connection signal="area_exited" from="SearchBox" to="." method="_on_search_box_area_exited"]
[connection signal="timeout" from="Fight" to="." method="_on_fight_timeout"]
